--- a/turing-js-sdk/package.json
+++ b/turing-js-sdk/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "dev": "tsc --watch",
     "clean": "",
-    "prepublishOnly": "npm run clean && npm run build"
+    "prepublishOnly": "npm run clean && npm install && npm run build"
   },
   "keywords": [
     "turing",
