--- a/turing-js-sdk/package.json
+++ b/turing-js-sdk/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "npm install && tsc",
     "dev": "tsc --watch",
     "clean": "",
     "prepublishOnly": "npm run clean && npm install && npm run build"
