--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -44,3 +44,16 @@ updates:
         applies-to: version-updates
         patterns:
           - "*"
+  - package-ecosystem: "npm" # See documentation for possible values
+    directory: "/turing-js-sdk" # Location of package manifests
+    schedule:
+      interval: "weekly"
+    target-branch: "2025.3"
+    open-pull-requests-limit: 15
+    ignore:
+      - dependency-name: "typescript"
+    groups:
+      react:
+        applies-to: version-updates
+        patterns:
+          - "*"
