--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -84,6 +84,7 @@ jobs:
         uses: MathieuSoysal/Javadoc-publisher.yml@v3.0.2
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           javadoc-branch: javadoc
           java-version: 21
           target-folder: docs/latest/javadoc
@@ -96,4 +97,5 @@ jobs:
           npm publish
         env:
            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
