--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -53,7 +53,7 @@ updates:
     ignore:
       - dependency-name: "typescript"
     groups:
-      react:
+      sdk-lib:
         applies-to: version-updates
         patterns:
           - "*"
@@ -66,7 +66,7 @@ updates:
     ignore:
       - dependency-name: "typescript"
     groups:
-      react:
+      sdk-sample:
         applies-to: version-updates
         patterns:
           - "*"
